tests/configuration/invalid_environment/invalid_value/configuration/settings_bool.py
from selva.configuration import environment as env

env.get_bool("INVALID")
